--- a/src/pemi/ui/basic.ui
+++ b/src/pemi/ui/basic.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>893</width>
-    <height>525</height>
+    <height>519</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,14 +16,27 @@
   <property name="statusTip">
    <string/>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="0">
+  <layout class="QGridLayout" name="gridLayout" columnstretch="1,1,1,2,2,0">
+   <item row="3" column="1">
+    <widget class="QDoubleSpinBox" name="refreshBox">
+     <property name="suffix">
+      <string> Hz</string>
+     </property>
+     <property name="decimals">
+      <number>1</number>
+     </property>
+     <property name="value">
+      <double>1.000000000000000</double>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0" colspan="6">
     <widget class="QTabWidget" name="tabWidget">
      <property name="tabPosition">
       <enum>QTabWidget::East</enum>
      </property>
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="tab_2">
       <attribute name="title">
@@ -168,53 +181,10 @@
             </property>
            </widget>
           </item>
-          <item row="3" column="1" colspan="3">
-           <layout class="QHBoxLayout" name="addressLayout">
-            <item>
-             <widget class="QLabel" name="label_13">
-              <property name="font">
-               <font>
-                <weight>75</weight>
-                <bold>true</bold>
-               </font>
-              </property>
-              <property name="text">
-               <string>Address:</string>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </item>
           <item row="0" column="3">
            <widget class="QLabel" name="armVerLabel">
             <property name="text">
              <string>Unknown</string>
-            </property>
-           </widget>
-          </item>
-          <item row="4" column="1">
-           <widget class="QLabel" name="label_14">
-            <property name="font">
-             <font>
-              <weight>75</weight>
-              <bold>true</bold>
-             </font>
-            </property>
-            <property name="text">
-             <string>Refresh Rate:</string>
-            </property>
-           </widget>
-          </item>
-          <item row="4" column="3">
-           <widget class="QDoubleSpinBox" name="refreshBox">
-            <property name="suffix">
-             <string> Hz</string>
-            </property>
-            <property name="decimals">
-             <number>1</number>
-            </property>
-            <property name="value">
-             <double>1.000000000000000</double>
             </property>
            </widget>
           </item>
@@ -494,16 +464,13 @@
           <string>Plot</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_10" columnstretch="2,0,6,0">
-          <item row="0" column="0">
-           <widget class="QWidget" name="widget" native="true"/>
-          </item>
           <item row="2" column="2">
-           <widget class="QComboBox" name="comboBox"/>
+           <widget class="QComboBox" name="selectPlotBox"/>
           </item>
           <item row="2" column="3">
-           <widget class="QPushButton" name="pushButton">
+           <widget class="QPushButton" name="selectPlotButton">
             <property name="text">
-             <string>Add</string>
+             <string>Plot</string>
             </property>
            </widget>
           </item>
@@ -529,7 +496,11 @@
            </widget>
           </item>
           <item row="3" column="3">
-           <widget class="QSpinBox" name="spinBox"/>
+           <widget class="QSpinBox" name="pointsBox">
+            <property name="value">
+             <number>50</number>
+            </property>
+           </widget>
           </item>
           <item row="3" column="1" colspan="2">
            <widget class="QLabel" name="label_19">
@@ -538,6 +509,9 @@
             </property>
            </widget>
           </item>
+          <item row="0" column="0" colspan="4">
+           <widget class="PlotWidget" name="plotWidget" native="true"/>
+          </item>
          </layout>
         </widget>
        </item>
@@ -545,8 +519,75 @@
      </widget>
     </widget>
    </item>
+   <item row="3" column="0">
+    <widget class="QLabel" name="label_14">
+     <property name="font">
+      <font>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>Refresh Rate:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="2">
+    <spacer name="horizontalSpacer_2">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="3" column="3">
+    <layout class="QHBoxLayout" name="addressLayout">
+     <item>
+      <widget class="QLabel" name="label_13">
+       <property name="font">
+        <font>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>Address:</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item row="3" column="4">
+    <widget class="QCheckBox" name="allVarCheckbox">
+     <property name="enabled">
+      <bool>false</bool>
+     </property>
+     <property name="toolTip">
+      <string>Get values for all variables applicable to this power supply. May result in longer fetch times.</string>
+     </property>
+     <property name="toolTipDuration">
+      <number>3</number>
+     </property>
+     <property name="text">
+      <string>Get IIB variables</string>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>PlotWidget</class>
+   <extends>QWidget</extends>
+   <header>pyqtgraph</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
